# video2ppt

./: .gitignore  README.md  pyproject.toml
video2ppt/: __init__.py  aids.py  aids_cli.py  cli.py  env.py  io_utils.py  llm.py  media.py  mermaid.py  models.py  notes.py  progress.py  refine.py  render.py  render_cli.py  scanner.py  transcriber.py  validate_cli.py  validation.py
video2ppt_notes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
