[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video2ppt-notes"
version = "0.1.0"
description = "Convert lecture videos into validated PPT-like HTML notes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "certifi>=2024.0.0",
  "faster-whisper>=1.0.0",
]

[project.scripts]
video2notes = "video2ppt.cli:main"
video2notes-render = "video2ppt.render_cli:main"
video2notes-aids = "video2ppt.aids_cli:main"
video2notes-validate = "video2ppt.validate_cli:main"

[tool.setuptools.packages.find]
include = ["video2ppt*"]
